--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -21,77 +21,117 @@
         ads:layout_constraintLeft_toLeftOf="parent"
         ads:layout_constraintBottom_toBottomOf="parent"
         android:layout_marginBottom="8dp"
-        ads:layout_constraintTop_toTopOf="parent"
-        android:layout_marginTop="8dp"
-        ads:layout_constraintVertical_bias="1.0">
+        android:layout_marginStart="8dp"
+        android:layout_marginEnd="8dp">
     </com.google.android.gms.ads.AdView>
-
-    <ImageView
-        android:id="@+id/imageStart"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginBottom="8dp"
-        android:layout_marginLeft="8dp"
-        android:layout_marginRight="8dp"
-        android:layout_marginTop="8dp"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.38"
-        app:srcCompat="@drawable/button_start" />
 
     <!-- sign-in button -->
 
-    <com.google.android.gms.common.SignInButton
-        android:id="@+id/sign_in_button"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        app:layout_constraintTop_toTopOf="parent"
-        android:layout_marginTop="8dp"
-        android:layout_marginRight="8dp"
-        app:layout_constraintRight_toRightOf="parent" />
-
     <!-- sign-out button -->
-    <Button
-        android:id="@+id/sign_out_button"
-        android:layout_width="wrap_content"
+
+    <LinearLayout
+        android:layout_width="304dp"
         android:layout_height="wrap_content"
-        app:layout_constraintTop_toTopOf="parent"
-        android:layout_marginTop="8dp"
+        android:orientation="horizontal"
+        android:layout_marginLeft="8dp"
+        app:layout_constraintLeft_toLeftOf="parent"
         android:layout_marginRight="8dp"
         app:layout_constraintRight_toRightOf="parent"
-        android:text="Sign Out"
-        android:visibility="gone" />
-
-    <ImageButton
-        android:id="@+id/buttonLocalHighScores"
-        android:layout_width="64dp"
-        android:layout_height="64dp"
-        android:layout_marginLeft="8dp"
+        app:layout_constraintTop_toTopOf="parent"
         android:layout_marginTop="8dp"
+        android:id="@+id/linearLayout3"
+        android:layout_marginStart="8dp"
+        android:layout_marginEnd="8dp">
+
+        <ImageButton
+            android:id="@+id/buttonLocalHighScores"
+            android:layout_width="wrap_content"
+            android:layout_height="64dp"
+            android:layout_marginLeft="8dp"
+            android:layout_marginStart="8dp"
+            android:layout_marginTop="8dp"
+            android:layout_weight="1"
+            app:layout_constraintLeft_toLeftOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            app:srcCompat="@drawable/ic_person_black_24dp" />
+
+        <ImageButton
+            android:id="@+id/buttonOnlineHighScores"
+            android:layout_width="wrap_content"
+            android:layout_height="64dp"
+            android:layout_marginLeft="8dp"
+            android:layout_marginStart="8dp"
+            android:layout_marginTop="8dp"
+            android:layout_weight="1"
+            app:layout_constraintLeft_toRightOf="@+id/buttonLocalHighScores"
+            app:layout_constraintTop_toTopOf="parent"
+            app:srcCompat="@drawable/ic_public_black_24dp" />
+
+        <ImageButton
+            android:id="@+id/buttonAchievements"
+            android:layout_width="wrap_content"
+            android:layout_height="64dp"
+            android:layout_marginLeft="8dp"
+            android:layout_marginStart="8dp"
+            android:layout_marginTop="8dp"
+            android:layout_weight="1"
+            app:layout_constraintLeft_toRightOf="@+id/buttonOnlineHighScores"
+            app:layout_constraintTop_toTopOf="parent"
+            app:srcCompat="@drawable/ic_stars_black_24dp" />
+
+        <Button
+            android:id="@+id/sign_out_button"
+            android:layout_width="wrap_content"
+            android:layout_height="64dp"
+            android:layout_weight="1"
+            android:text="Sign Out"
+            android:visibility="gone"
+            app:layout_constraintRight_toRightOf="parent"
+            app:layout_constraintTop_toTopOf="parent" />
+
+        <com.google.android.gms.common.SignInButton
+            android:id="@+id/sign_in_button"
+            android:layout_width="wrap_content"
+            android:layout_height="match_parent"
+            android:layout_marginEnd="8dp"
+            android:layout_marginRight="8dp"
+            android:layout_marginTop="8dp"
+            android:layout_weight="1"
+            app:layout_constraintRight_toRightOf="parent"
+            app:layout_constraintTop_toTopOf="parent" />
+    </LinearLayout>
+
+    <LinearLayout
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:orientation="vertical"
+        android:layout_marginLeft="8dp"
         app:layout_constraintLeft_toLeftOf="parent"
+        android:layout_marginRight="8dp"
+        app:layout_constraintRight_toRightOf="parent"
+        android:layout_marginStart="8dp"
+        android:layout_marginEnd="8dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        android:layout_marginBottom="8dp"
         app:layout_constraintTop_toTopOf="parent"
-        app:srcCompat="@drawable/ic_person_black_24dp" />
+        android:layout_marginTop="8dp">
 
-    <ImageButton
-        android:id="@+id/buttonOnlineHighScores"
-        android:layout_width="64dp"
-        android:layout_height="64dp"
-        android:layout_marginLeft="8dp"
-        android:layout_marginTop="8dp"
-        app:layout_constraintLeft_toRightOf="@+id/buttonLocalHighScores"
-        app:layout_constraintTop_toTopOf="parent"
-        app:srcCompat="@drawable/ic_public_black_24dp" />
+        <Button
+            android:id="@+id/btnSinglePlayer"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="Single Player"
+            tools:layout_editor_absoluteX="8dp"
+            tools:layout_editor_absoluteY="0dp" />
 
-    <ImageButton
-        android:id="@+id/buttonAchievements"
-        android:layout_width="64dp"
-        android:layout_height="64dp"
-        android:layout_marginLeft="8dp"
-        android:layout_marginTop="8dp"
-        app:layout_constraintLeft_toRightOf="@+id/buttonOnlineHighScores"
-        app:layout_constraintTop_toTopOf="parent"
-        app:srcCompat="@drawable/ic_stars_black_24dp" />
+        <Button
+            android:id="@+id/btnMultiplayer"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="Multiplayer"
+            tools:layout_editor_absoluteX="8dp"
+            tools:layout_editor_absoluteY="182dp" />
+
+    </LinearLayout>
 
 </android.support.constraint.ConstraintLayout>
